# Small-LLM-E2E

./: .gitmodules  README.md
deploy/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _logging.py  main.py  pyproject.toml  run.sh
deploy/docker/: build.sh  docker-compose.yml.example  run.sh
train/: .gitignore  README.MD  README.md  merge_lora.py  push_to_hub.py  requirements.txt  script.ipynb  train_pythia1b4_dedup.py
